--- a/src/main/resources/templates/kanban-baojingjilu.html
+++ b/src/main/resources/templates/kanban-baojingjilu.html
@@ -16,9 +16,10 @@
     <!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
 </head>
 
-<body data-sidebar="dark"><!-- Begin page -->
+<body data-sidebar="dark" class="bgc"><!-- Begin page -->
 <body id="layout-wrapper">
 
     <!--topbar and leftbar start-->
@@ -29,25 +30,31 @@
     <div class="main-content">
         <div class="page-content">
             <div class="container-fluid">
+
                 <!--设备警告展示块-->
                 <!--    OP40、OP50            -->
                 <div class="row">
+                    <div class="col-12">
+                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                            <h4 class="mb-0">设备报警记录</h4>
+                        </div>
+                    </div>
                     <!--  OP40-车床 -->
                     <div class="col-lg-5 border-light border card">
                         <div class="card text-white-50" th:classappend="${status_OP40.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP40.get(2)}"></i>OP40-车床</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_OP40.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP40.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='OP40-车床'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -57,17 +64,17 @@
                         <div class="card text-white-50" th:classappend="${status_OP50.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP50.get(2)}"></i>OP50-车床</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_OP50.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP50.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='OP50-车床'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -81,17 +88,17 @@
                         <div class="card text-white-50" th:classappend="${status_OP60.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP60.get(2)}"></i>OP60-立加</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_OP60.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP60.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='OP60-立加'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -101,17 +108,17 @@
                         <div class="card text-white-50" th:classappend="${status_OP70.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP70.get(2)}"></i>OP70-立加</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_OP70.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP70.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='OP70-立加'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -125,17 +132,17 @@
                         <div class="card text-white-50" th:classappend="${status_PLC1.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_PLC1.get(2)}"></i>总控PLC-1</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_PLC1.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_PLC1.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='总控PLC-1'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -145,17 +152,17 @@
                         <div class="card text-white-50" th:classappend="${status_PLC2.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_PLC2.get(2)}"></i>总控PLC-2</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_PLC2.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_PLC2.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='总控PLC-2'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -169,17 +176,17 @@
                         <div class="card text-white-50" th:classappend="${status_measure.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_measure.get(2)}"></i>测量机</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_measure.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_measure.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='测量机'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
@@ -189,17 +196,17 @@
                         <div class="card text-white-50" th:classappend="${status_target.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_target.get(2)}"></i>打标机</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${status_target.get(0)}">&nbsp;[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_target.get(0)}"]></span></span><!---->
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
                             <div th:each="item:${lists}">
                                 <div th:if="${item.getDeviceName()=='打标机'}">
-                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
-                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
-                                    <hr style="margin: 5px">
+                                    <span class="fas fa-bell"></span>&nbsp;&nbsp;编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2 " style="float:right;margin-right: 20px" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="fas fa-file-alt"></span>&nbsp;&nbsp;信息：<span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
