--- a/src/main/resources/templates/ChanPin.html
+++ b/src/main/resources/templates/ChanPin.html
@@ -13,9 +13,10 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
 </head>
 
-<body data-sidebar="dark">
+<body data-sidebar="dark" class="bgc">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
@@ -34,12 +35,15 @@
                     <div class="col-12">
                     </div>
                     <div class="col-12">
+                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                            <h4 class="mb-0">产品信息</h4>
+                        </div>
                     </div>
                 </div><!-- end page title -->
 
                 <div class="card" style="margin-top: 10px">
-                    <div class="card-body"><h4 class="card-title">产品信息</h4>
-                        <div class="table-responsive">
+<!--                    <div class="card-body"><h4 class="card-title">产品信息</h4>-->
+                        <div class="table-responsive" style="margin: 50px 1px 50px 1px">
                             <table class="table mb-0 table-bordered table-striped" style="width: 800px;margin:auto;auto;text-align: center">
                                 <thead>
                                 <tr>
