--- a/src/main/resources/templates/OEE.html
+++ b/src/main/resources/templates/OEE.html
@@ -13,10 +13,11 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
     <script src="../static/js/echarts.js"></script>
 </head>
 
-<body data-sidebar="dark">
+<body data-sidebar="dark" class="bgc">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
@@ -34,7 +35,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="page-title-box d-flex align-items-center justify-content-between">
-                            <h4 class="mb-0"></h4>
+                            <h4 class="mb-0">当前设备OEE分析</h4>
 <!--          无用的右侧标题                  -->
 <!--                            <div class="page-title-right">-->
 <!--                                <ol class="breadcrumb m-0">-->
@@ -56,7 +57,7 @@
                                 <a th:href="@{/OEE1}"><button type="button" class="btn btn-sm btn-light">整线OEE</button></a>
                             </div>
                         </div>
-                        <h4 class="card-title mb-4">当前设备OEE分析</h4>
+<!--                        <h4 class="card-title mb-4">当前设备OEE分析</h4>-->
                         <div id="main" style="width: 800px; height: 400px; margin: 50px auto auto; -webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1646124908884"></div>
                         <script type="text/javascript">
                             // 基于准备好的dom，初始化echarts实例
