--- a/src/main/resources/templates/ZhuangTaiChaKan.html
+++ b/src/main/resources/templates/ZhuangTaiChaKan.html
@@ -12,10 +12,11 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
 <!--    <script src="../static/js/echarts.js"></script>-->
 </head>
 
-<body data-sidebar="dark"><!-- Begin page -->
+<body data-sidebar="dark" class="bgc"><!-- Begin page -->
 <div id="layout-wrapper">
 
     <!--topbar and leftbar start-->
@@ -28,21 +29,13 @@
             <div class="container-fluid"><!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between"><h4 class="mb-0">
-                            状态信息</h4>
-<!-- 无用的右侧标题                           -->
-<!--                            <div class="page-title-right">-->
-<!--                                <ol class="breadcrumb m-0">-->
-<!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Ecommerce</a></li>-->
-<!--                                    <li class="breadcrumb-item active">Orders</li>-->
-<!--                                </ol>-->
-<!--                            </div>-->
+                        <div class="page-title-box d-flex align-items-center justify-content-between"><h3 class="mb-0">
+                            状态信息</h3>
                         </div>
                     </div>
                 </div><!-- end page title -->
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="card" style="width: max-content;position: center">
+                    <div class="col-md-12">
                             <div class="card-body">
                                 <div class="media">
 
@@ -54,24 +47,25 @@
 <!--                                        <h5 class="mb-0" style="color: #ff1741;font-size: x-large">停机（红）</h5>-->
 <!--                                        <h5 class="mb-0" style="color: #7c8a96;font-size: x-large">离线（灰）</h5>-->
 <!--                                    </div>-->
-                                    <div class="production_line">
-                                        <p class="name"><strong th:text="${data.get(0).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
-                                        <div class="span1">
-                                            id：<span class="span2" th:text="${data.get(0).getId()}">id</span></br>
-                                            pid：<span class="span2" th:text="${data.get(0).getPid()}">pid</span></br>
-                                            external_id：<span class="span2" th:text="${data.get(0).getExternalId()}">external_id</span></br>
-                                            drivername：<span class="span2" th:text="${data.get(0).getDrivername()}">drivername</span></br>
 
+                                    <div class="production_line">
+                                        <p class="name "><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(0).getName()}">&nbsp;&nbsp;name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
+                                        <div class="span1">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;id：<span class="span2" th:text="${data.get(0).getId()}">id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" th:text="${data.get(0).getPid()}">pid</span></br>  <hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" th:text="${data.get(0).getExternalId()}">external_id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;drivername：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">drivername</span></br><hr style="margin: 5px">
                                         </div>
                                     </div>
-                                    <div class="production_line">
-                                        <p class="name"><strong th:text="${data.get(1).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
-                                        <div class="span1">
-                                            id：<span class="span2" th:text="${data.get(1).getId()}">id</span></br>
-                                            pid：<span class="span2" th:text="${data.get(1).getPid()}">pid</span></br>
-                                            external_id：<span class="span2" th:text="${data.get(1).getExternalId()}">external_id</span></br>
-                                            drivername：<span class="span2" th:text="${data.get(1).getDrivername()}">drivername</span></br>
 
+
+                                    <div class="production_line">
+                                        <p class="name"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(1).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
+                                        <div class="span1">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;id：<span class="span2" th:text="${data.get(1).getId()}">id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" th:text="${data.get(1).getPid()}">pid</span></br>  <hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" th:text="${data.get(1).getExternalId()}">external_id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;drivername：<span class="span2 span2 col-md-6" th:text="${data.get(1).getDrivername()}">drivername</span></br><hr style="margin: 5px">
                                         </div>
                                     </div>
 
@@ -79,62 +73,59 @@
 
                                 <div class="media">
                                     <div class="production_line">
-                                        <p class="name"><strong th:text="${data.get(2).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
+                                        <p class="name"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(2).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
                                         <div class="span1">
-                                            id：<span class="span2" th:text="${data.get(2).getId()}">id</span></br>
-                                            pid：<span class="span2" th:text="${data.get(2).getPid()}">pid</span></br>
-                                            external_id：<span class="span2" th:text="${data.get(2).getExternalId()}">external_id</span></br>
-                                            drivername：<span class="span2" th:text="${data.get(2).getDrivername()}">drivername</span></br>
-
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;id：<span class="span2" th:text="${data.get(2).getId()}">id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" th:text="${data.get(2).getPid()}">pid</span></br>  <hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" th:text="${data.get(2).getExternalId()}">external_id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;drivername：<span class="span2 span2 col-md-6" th:text="${data.get(2).getDrivername()}">drivername</span></br><hr style="margin: 5px">
                                         </div>
                                     </div>
-                                    <div class="production_line" style="background-color: #ff626226">
-                                        <p class="name" style="background-color: #ff626296"><strong th:text="${data.get(3).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[停机 x分钟]</span></p>
+                                    <div class="production_line" >
+                                        <p class="name"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(3).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[停机 x分钟]</span></p>
                                         <div class="span1">
-                                            id：<span class="span2" th:text="${data.get(3).getId()}">id</span></br>
-                                            pid：<span class="span2" th:text="${data.get(3).getPid()}">pid</span></br>
-                                            external_id：<span class="span2" th:text="${data.get(3).getExternalId()}">external_id</span></br>
-                                            drivername：<span class="span2" th:text="${data.get(3).getDrivername()}">drivername</span></br>
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;id：<span class="span2" th:text="${data.get(3).getId()}">id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" th:text="${data.get(3).getPid()}">pid</span></br>  <hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" th:text="${data.get(3).getExternalId()}">external_id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;drivername：<span class="span2 span2 col-md-6" th:text="${data.get(3).getDrivername()}">drivername</span></br><hr style="margin: 5px">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="media">
                                     <div class="production_line">
-                                        <p class="name"><strong th:text="${data.get(4).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
+                                        <p class="name"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(4).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
                                         <div class="span1">
-                                            id：<span class="span2" th:text="${data.get(4).getId()}">id</span></br>
-                                            pid：<span class="span2" th:text="${data.get(4).getPid()}">pid</span></br>
-                                            external_id：<span class="span2" th:text="${data.get(4).getExternalId()}">external_id</span></br>
-                                            drivername：<span class="span2" th:text="${data.get(4).getDrivername()}">drivername</span></br>
-
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;id：<span class="span2" th:text="${data.get(4).getId()}">id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" th:text="${data.get(4).getPid()}">pid</span></br>  <hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" th:text="${data.get(4).getExternalId()}">external_id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;drivername：<span class="span2 span2 col-md-6" th:text="${data.get(4).getDrivername()}">drivername</span></br><hr style="margin: 5px">
                                         </div>
                                     </div>
                                     <div class="production_line">
-                                        <p class="name"><strong th:text="${data.get(5).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
+                                        <p class="name"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(5).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
                                         <div class="span1">
-                                            id：<span class="span2" th:text="${data.get(5).getId()}">id</span></br>
-                                            pid：<span class="span2" th:text="${data.get(5).getPid()}">pid</span></br>
-                                            external_id：<span class="span2" th:text="${data.get(5).getExternalId()}">external_id</span></br>
-                                            drivername：<span class="span2" th:text="${data.get(5).getDrivername()}">drivername</span></br>
-
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;id：<span class="span2" th:text="${data.get(5).getId()}">id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" th:text="${data.get(5).getPid()}">pid</span></br>  <hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" th:text="${data.get(5).getExternalId()}">external_id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;drivername：<span class="span2 span2 col-md-6" th:text="${data.get(5).getDrivername()}">drivername</span></br><hr style="margin: 5px">
                                         </div>
                                     </div>
 
                                 </div>
                                 <div class="media">
                                     <div class="production_line">
-                                        <p class="name"><strong th:text="${data.get(6).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
+                                        <p class="name"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(6).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[设定 x分钟]</span></p>
                                         <div class="span1">
-                                            id：<span class="span2" th:text="${data.get(6).getId()}">id</span></br>
-                                            pid：<span class="span2" th:text="${data.get(6).getPid()}">pid</span></br>
-                                            external_id：<span class="span2" th:text="${data.get(6).getExternalId()}">external_id</span></br>
-                                            drivername：<span class="span2" th:text="${data.get(6).getDrivername()}">drivername</span></br>
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;id：<span class="span2" th:text="${data.get(6).getId()}">id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" th:text="${data.get(6).getPid()}">pid</span></br>  <hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" th:text="${data.get(6).getExternalId()}">external_id</span></br><hr style="margin: 5px">
+                                            <span class="dripicons-dot"></span>&nbsp;&nbsp;drivername：<span class="span2 span2 col-md-6" th:text="${data.get(6).getDrivername()}">drivername</span></br><hr style="margin: 5px">
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            </div>
+
                         </div>
 
 
