--- a/src/main/resources/templates/ZhuangTaiFenBu.html
+++ b/src/main/resources/templates/ZhuangTaiFenBu.html
@@ -13,10 +13,11 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
     <script src="../static/js/echarts.js"></script>
 </head>
 
-<body data-sidebar="dark"  >
+<body data-sidebar="dark" class="bgc">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
@@ -28,67 +29,109 @@
     <!-- Start right Content here -->
     <!-- ============================================================== -->
 
-    <div id="main" style="width: 800px;height:400px;margin: auto;margin-top: 100px" ></div>
-    <script type="text/javascript">
-        // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('main'));
+    <div class="main-content">
+        <div class="page-content">
+            <div class="container-fluid">
+                <!-- start page title -->
+                <div class="row">
+                    <div class="col-12">
+                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                            <h4 class="mb-0">当前设备OEE分析</h4>
+                            <!--          无用的右侧标题                  -->
+                            <!--                            <div class="page-title-right">-->
+                            <!--                                <ol class="breadcrumb m-0">-->
+                            <!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>-->
+                            <!--                                    <li class="breadcrumb-item active">Dashboard</li>-->
+                            <!--                                </ol>-->
+                            <!--                            </div>-->
+                        </div>
+                    </div>
+                </div><!-- end page title -->
+                <div class="card">
+                    <div class="card-body">
+                        <div class="float-right d-none d-md-inline-block">
+                            <div class="btn-group mb-2"></div>
+                        </div>
+                        <div class="float-right d-none d-md-inline-block">
+                            <div class="btn-group mb-2">
+                                <a href="#"><button type="button" class="btn btn-sm btn-light active">当前设备OEE</button></a>
+                                <a th:href="@{/OEE1}"><button type="button" class="btn btn-sm btn-light">整线OEE</button></a>
+                            </div>
+                        </div>
+                        <!--                        <h4 class="card-title mb-4">当前设备OEE分析</h4>-->
+                        <div id="main" style="width: 800px;height:400px;margin: auto;margin-top: 100px" ></div>
+                        <script type="text/javascript">
+                            // 基于准备好的dom，初始化echarts实例
+                            var myChart = echarts.init(document.getElementById('main'));
 
-        // 指定图表的配置项和数据
-        var option = {
-            title : {
-                text: '整线设备状态分布',
-                x:'center'
-            },
-            tooltip : {
-                trigger: 'item',
-                formatter: "{a} <br/>{b} : {c} ({d}%)"
-            },
-            legend: {
-                orient : 'vertical',
-                x : 'left',
-                data:['运行','空闲','停机','离线']
-            },
-            toolbox: {
-                show : true,
-                feature : {
-                    mark : {show: true},
-                    dataView : {show: true, readOnly: false},
-                    magicType : {
-                        show: true,
-                        type: ['pie', 'funnel'],
-                        option: {
-                            funnel: {
-                                x: '25%',
-                                width: '50%',
-                                funnelAlign: 'left',
-                                max: 1548
-                            }
-                        }
-                    },
-                    restore : {show: true},
-                    saveAsImage : {show: true}
-                }
-            },
-            calculable : true,
-            series : [
-                {
-                    name:'访问来源',
-                    type:'pie',
-                    radius : '55%',
-                    center: ['50%', '60%'],
-                    data:[
-                        {value:335, name:'运行'},
-                        {value:310, name:'空闲'},
-                        {value:234, name:'停机'},
-                        {value:135, name:'离线'},
-                    ]
-                }
-            ]
-        };
+                            // 指定图表的配置项和数据
+                            var option = {
+                                title : {
+                                    text: '整线设备状态分布',
+                                    x:'center'
+                                },
+                                tooltip : {
+                                    trigger: 'item',
+                                    formatter: "{a} <br/>{b} : {c} ({d}%)"
+                                },
+                                legend: {
+                                    orient : 'vertical',
+                                    x : 'left',
+                                    data:['运行','空闲','停机','离线']
+                                },
+                                toolbox: {
+                                    show : true,
+                                    feature : {
+                                        mark : {show: true},
+                                        dataView : {show: true, readOnly: false},
+                                        magicType : {
+                                            show: true,
+                                            type: ['pie', 'funnel'],
+                                            option: {
+                                                funnel: {
+                                                    x: '25%',
+                                                    width: '50%',
+                                                    funnelAlign: 'left',
+                                                    max: 1548
+                                                }
+                                            }
+                                        },
+                                        restore : {show: true},
+                                        saveAsImage : {show: true}
+                                    }
+                                },
+                                calculable : true,
+                                series : [
+                                    {
+                                        name:'访问来源',
+                                        type:'pie',
+                                        radius : '55%',
+                                        center: ['50%', '60%'],
+                                        data:[
+                                            {value:335, name:'运行'},
+                                            {value:310, name:'空闲'},
+                                            {value:234, name:'停机'},
+                                            {value:135, name:'离线'},
+                                        ]
+                                    }
+                                ]
+                            };
 
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
-    </script>
+                            // 使用刚指定的配置项和数据显示图表。
+                            myChart.setOption(option);
+                        </script>
+
+
+                    </div><!-- container-fluid -->
+                </div>
+
+            </div>
+        </div>
+    </div><!-- end row -->
+
+
+
+
 
 
 
