--- a/src/main/resources/templates/kanban-shebeiguochengcanshu.html
+++ b/src/main/resources/templates/kanban-shebeiguochengcanshu.html
@@ -13,9 +13,10 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
     <script src="../static/js/echarts.js"></script>
 </head>
-<body data-sidebar="dark">
+<body data-sidebar="dark" class="bgc">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
@@ -27,72 +28,111 @@
     <!-- Start right Content here -->
     <!-- ============================================================== -->
 
-    <div id="main" style="width: 800px; height: 400px; margin: 100px auto auto; -webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1646123127942"><div style="position: relative; width: 800px; height: 400px; padding: 0px; margin: 0px; border-width: 0px; cursor: default;"><canvas data-zr-dom-id="zr_0" width="935" height="467" style="position: absolute; left: 0px; top: 0px; width: 800px; height: 400px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"></canvas></div><div class="" style="position: absolute; display: block; border-style: solid; white-space: nowrap; z-index: 9999999; box-shadow: rgba(0, 0, 0, 0.2) 1px 2px 10px; transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, visibility 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, transform 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s; background-color: rgb(255, 255, 255); border-width: 1px; border-radius: 4px; color: rgb(102, 102, 102); font: 14px / 21px &quot;Microsoft YaHei&quot;; padding: 10px; top: 0px; left: 0px; transform: translate3d(561px, 235px, 0px); border-color: rgb(255, 255, 255); pointer-events: none; visibility: hidden; opacity: 0;"><div style="margin: 0px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><div style="font-size:14px;color:#666;font-weight:400;line-height:1;">周日</div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#5470c6;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">进给倍率</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">1</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#91cc75;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">进给速度</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">9</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#fac858;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">主轴倍率</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">3</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#ee6666;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">主轴转速</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">9</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div></div></div>
-    <script type="text/javascript">
-        // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('main'));
+    <div class="main-content">
+        <div class="page-content">
+            <div class="container-fluid">
+                <!-- start page title -->
+                <div class="row">
+                    <div class="col-12">
+                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                            <h4 class="mb-0">设备过程参数</h4>
+                            <!--           无用的右侧标题                 -->
+                            <!--                            <div class="page-title-right">-->
+                            <!--                                <ol class="breadcrumb m-0">-->
+                            <!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>-->
+                            <!--                                    <li class="breadcrumb-item active">Dashboard</li>-->
+                            <!--                                </ol>-->
+                            <!--                            </div>-->
+                        </div>
+                    </div>
+                </div><!-- end page title -->
+                <div class="card">
+                    <div class="card-body">
+                        <div class="float-right d-none d-md-inline-block">
+                            <div class="btn-group mb-2"></div>
+                        </div>
+                        <!--                        <h4 class="card-title mb-4">整线小时产量</h4>-->
+                        <div id="main" style="width: 800px; height: 400px; margin: 100px auto auto; -webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1646123127942"><div style="position: relative; width: 800px; height: 400px; padding: 0px; margin: 0px; border-width: 0px; cursor: default;"><canvas data-zr-dom-id="zr_0" width="935" height="467" style="position: absolute; left: 0px; top: 0px; width: 800px; height: 400px; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"></canvas></div><div class="" style="position: absolute; display: block; border-style: solid; white-space: nowrap; z-index: 9999999; box-shadow: rgba(0, 0, 0, 0.2) 1px 2px 10px; transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, visibility 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, transform 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s; background-color: rgb(255, 255, 255); border-width: 1px; border-radius: 4px; color: rgb(102, 102, 102); font: 14px / 21px &quot;Microsoft YaHei&quot;; padding: 10px; top: 0px; left: 0px; transform: translate3d(561px, 235px, 0px); border-color: rgb(255, 255, 255); pointer-events: none; visibility: hidden; opacity: 0;"><div style="margin: 0px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><div style="font-size:14px;color:#666;font-weight:400;line-height:1;">周日</div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#5470c6;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">进给倍率</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">1</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#91cc75;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">进给速度</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">9</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#fac858;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">主轴倍率</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">3</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="margin: 10px 0 0;line-height:1;"><div style="margin: 0px 0 0;line-height:1;"><span style="display:inline-block;margin-right:4px;border-radius:10px;width:10px;height:10px;background-color:#ee6666;"></span><span style="font-size:14px;color:#666;font-weight:400;margin-left:2px">主轴转速</span><span style="float:right;margin-left:20px;font-size:14px;color:#666;font-weight:900">9</span><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div></div></div>
+                        <script type="text/javascript">
+                            // 基于准备好的dom，初始化echarts实例
+                            var myChart = echarts.init(document.getElementById('main'));
 
-        // 指定图表的配置项和数据
-        var option = {
-            title : {
-                text: '设备过程参数'
-            },
-            tooltip : {
-                trigger: 'axis'
-            },
-            legend: {
-                data:['进给倍率','进给速度','主轴倍率','主轴转速']
-            },
-            toolbox: {
-                show : true,
-                feature : {
-                    mark : {show: true},
-                    dataView : {show: true, readOnly: false},
-                    magicType : {show: true, type: ['line', 'bar']},
-                    restore : {show: true},
-                    saveAsImage : {show: true}
-                }
-            },
-            calculable : true,
-            xAxis : [
-                {
-                    type : 'category',
-                    boundaryGap : false,
-                    data : ['周一','周二','周三','周四','周五','周六','周日']
-                }
-            ],
-            yAxis : [
-                {
-                    type : 'value',
-                }
-            ],
-            series : [
-                {
-                    name:'进给倍率',
-                    type:'line',
-                    data:[3, 2, 2.2, 1.5, 2.8, 0.9, 1]
-                },
-                {
-                    name:'进给速度',
-                    type:'line',
-                    data:[5, 6, 7, 4, 7, 11, 9]
-                },
-                {
-                    name:'主轴倍率',
-                    type:'line',
-                    data:[2, 4, 3.8, 2.9, 1.8, 2.2, 3]
-                },
-                {
-                    name:'主轴转速',
-                    type:'line',
-                    data:[8, 11, 12, 9, 10, 11, 9]
-                }
-            ]
-        };
+                            // 指定图表的配置项和数据
+                            var option = {
+                                title : {
+                                    text: '设备过程参数'
+                                },
+                                tooltip : {
+                                    trigger: 'axis'
+                                },
+                                legend: {
+                                    data:['进给倍率','进给速度','主轴倍率','主轴转速']
+                                },
+                                toolbox: {
+                                    show : true,
+                                    feature : {
+                                        mark : {show: true},
+                                        dataView : {show: true, readOnly: false},
+                                        magicType : {show: true, type: ['line', 'bar']},
+                                        restore : {show: true},
+                                        saveAsImage : {show: true}
+                                    }
+                                },
+                                calculable : true,
+                                xAxis : [
+                                    {
+                                        type : 'category',
+                                        boundaryGap : false,
+                                        data : ['周一','周二','周三','周四','周五','周六','周日']
+                                    }
+                                ],
+                                yAxis : [
+                                    {
+                                        type : 'value',
+                                    }
+                                ],
+                                series : [
+                                    {
+                                        name:'进给倍率',
+                                        type:'line',
+                                        data:[3, 2, 2.2, 1.5, 2.8, 0.9, 1]
+                                    },
+                                    {
+                                        name:'进给速度',
+                                        type:'line',
+                                        data:[5, 6, 7, 4, 7, 11, 9]
+                                    },
+                                    {
+                                        name:'主轴倍率',
+                                        type:'line',
+                                        data:[2, 4, 3.8, 2.9, 1.8, 2.2, 3]
+                                    },
+                                    {
+                                        name:'主轴转速',
+                                        type:'line',
+                                        data:[8, 11, 12, 9, 10, 11, 9]
+                                    }
+                                ]
+                            };
 
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
-    </script>
+                            // 使用刚指定的配置项和数据显示图表。
+                            myChart.setOption(option);
+                        </script>
+
+
+                    </div><!-- container-fluid -->
+                </div>
+
+            </div>
+        </div>
+    </div><!-- end row -->
+
+
+
+
+
+
+
 
 
 </div><!-- container-fluid -->
