--- a/src/main/resources/templates/knifes.html
+++ b/src/main/resources/templates/knifes.html
@@ -12,10 +12,11 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
 <!--    <script src="../static/js/echarts.js"></script>-->
 </head>
 
-<body data-sidebar="dark" ><!-- Begin page -->
+<body data-sidebar="dark" class="bgc"><!-- Begin page -->
 <div id="layout-wrapper">
 
     <!--topbar and leftbar start-->
