--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,7 @@
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
 </head>
 <body class="auth-body-bg">
 
@@ -22,7 +23,7 @@
                             <div class="col-lg-9">
                                 <div>
                                     <div class="text-center">
-                                        <div><a href="index.html" class="logo"><img src="../static/images/logo-dark1.png"
+                                        <div><a href="index.html" class="logo"><img src="../static/images/logo-light2.png"
                                                                                     height="60" alt="logo"></a></div>
 <!--                                        <h5 class="font-size-16 mt-4">欢迎回来！</h5>-->
                                         <p class="text-muted">欢迎回来！请登录</p></div>
