--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -20,7 +20,7 @@
     <script src="../static/js/echarts.js"></script>
     <script src="../static/libs/jquery/jquery.min.js"></script>
     <script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../static/js/graph/test.js"></script>
+    <script src="../static/js/graph/realTime_graph.js"></script>
 </head>
 
 
@@ -37,7 +37,7 @@
     <!-- Start right Content here -->
     <!-- ============================================================== -->
 
-    <div id="graph" style="width: 800px; height: 400px; margin: 100px auto auto; -webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1646123127942"></div>
+    <div id="OP40" style="width: 800px; height: 400px; margin: 100px auto auto"></div>
 <!--    <script type="text/javascript">-->
 <!--        var chartDom = document.getElementById('graph');-->
 <!--        var myChart = echarts.init(chartDom);-->
