用时分析页面展示+查询

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -35,84 +35,8 @@
                         class="logo-lg"><img src="../static/images/logo-dark2.png" alt="" height="55"></span></a></div>
                 <button type="button" class="btn btn-sm px-3 font-size-24 header-item waves-effect"
                         id="vertical-menu-btn"><i class="ri-menu-2-line align-middle"></i></button>
-                <!--无用的搜索-->
-<!--                <form class="app-search d-none d-lg-block">-->
-<!--                    <div class="position-relative"><input type="text" class="form-control" placeholder="Search..."><span-->
-<!--                            class="ri-search-line"></span></div>-->
-<!--                </form>-->
-<!--                <div class="dropdown dropdown-mega d-none d-lg-block ml-2">-->
-<!--                    <button type="button" class="btn header-item waves-effect" data-toggle="dropdown"-->
-<!--                            aria-haspopup="false" aria-expanded="false">Mega Menu <i class="mdi mdi-chevron-down"></i>-->
-<!--                    </button>-->
-<!--无用的目录-->
-<!--                    <div class="dropdown-menu dropdown-megamenu">-->
-<!--                        <div class="row">-->
-<!--                            <div class="col-sm-8">-->
-<!--                                <div class="row">-->
-<!--                                    <div class="col-md-4">-->
-<!--                                        <h5 class="font-size-14 mt-0">UI Components</h5>-->
-<!--                                        <ul class="list-unstyled megamenu-list">-->
-<!--                                            <li><a href="javascript:void(0);">Lightbox</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Range Slider</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Sweet Alert</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Rating</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Forms</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Tables</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Charts</a></li>-->
-<!--                                        </ul>-->
-<!--                                    </div>-->
-<!--                                    <div class="col-md-4">-->
-<!--                                        <h5 class="font-size-14 mt-0">Applications</h5>-->
-<!--                                        <ul class="list-unstyled megamenu-list">-->
-<!--                                            <li><a href="javascript:void(0);">Ecommerce</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Calendar</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Email</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Projects</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Tasks</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Contacts</a></li>-->
-<!--                                        </ul>-->
-<!--                                    </div>-->
-<!--                                    <div class="col-md-4">-->
-<!--                                        <h5 class="font-size-14 mt-0">Extra Pages</h5>-->
-<!--                                        <ul class="list-unstyled megamenu-list">-->
-<!--                                            <li><a href="javascript:void(0);">Light Sidebar</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Compact Sidebar</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Horizontal layout</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Maintenance</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Coming Soon</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Timeline</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">FAQs</a></li>-->
-<!--                                        </ul>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                            <div class="col-sm-4">-->
-<!--                                <div class="row">-->
-<!--                                    <div class="col-sm-6">-->
-<!--                                        <h5 class="font-size-14 mt-0">UI Components</h5>-->
-<!--                                        <ul class="list-unstyled megamenu-list">-->
-<!--                                            <li><a href="javascript:void(0);">Lightbox</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Range Slider</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Sweet Alert</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Rating</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Forms</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Tables</a></li>-->
-<!--                                            <li><a href="javascript:void(0);">Charts</a></li>-->
-<!--                                        </ul>-->
-<!--                                    </div>-->
-<!--                                    <div class="col-sm-5">-->
-<!--                                        <div><img src="../static/images/megamenu-img.png" alt=""-->
-<!--                                                  class="img-fluid mx-auto d-block"></div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
             </div>
             <div class="d-flex">
-
-
                 <div class="dropdown d-none d-lg-inline-block ml-1">
                     <button type="button" class="btn header-item noti-icon waves-effect" data-toggle="fullscreen"><i
                             class="ri-fullscreen-line"></i></button>
@@ -127,19 +51,6 @@
 <!--     无用的li标签                   -->
 <!--                        <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>-->
                     </button>
-<!-- 无用的目录                   -->
-<!--                    <div class="dropdown-menu dropdown-menu-right">-->
-<!--                        &lt;!&ndash; item&ndash;&gt;<a class="dropdown-item" href="#"><i class="ri-user-line align-middle mr-1"></i>Profile</a><a-->
-<!--                            class="dropdown-item" href="#"><i class="ri-wallet-2-line align-middle mr-1"></i>My-->
-<!--                        Wallet</a><a class="dropdown-item d-block" href="#"><span-->
-<!--                            class="badge badge-success float-right mt-1">11</span><i-->
-<!--                            class="ri-settings-2-line align-middle mr-1"></i>Settings</a><a class="dropdown-item"-->
-<!--                                                                                            href="#"><i-->
-<!--                            class="ri-lock-unlock-line align-middle mr-1"></i>Lock screen</a>-->
-<!--                        <div class="dropdown-divider"></div>-->
-
-<!--                        <button class="dropdown-item text-danger ri-shut-down-line align-middle mr-1 text-danger" onclick="window.location.href='/logout'">Logout</button>-->
-<!--                    </div>-->
                 </div>
                 <div class="dropdown d-inline-block">
                     <button type="button" class="btn header-item noti-icon right-bar-toggle waves-effect" onclick="window.location.href='/logout'"><i
@@ -195,7 +106,7 @@
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
                                                 <li><a th:href="@{/output}">产量数据</a></li>
                                                 <li><a th:href="@{/pruduct_information}">产品信息</a></li>
-
+                                                <li><a th:href="@{/time_analysis}">用时分析</a></li>
                                             </ul>
 
                                         </li>
